--- a/telecine/build.gradle
+++ b/telecine/build.gradle
@@ -80,4 +80,5 @@ dependencies {
   apt 'com.squareup.dagger:dagger-compiler:1.2.2'
   testCompile 'junit:junit:4.12'
   testCompile 'com.google.truth:truth:0.27'
+  compile project(':libstreaming')
 }
